Name:                 siege
Version:              0.1
Synopsis:             A DBMS written in Haskell.
License:              MIT
License-file:         LICENSE
Author:               DanielWaterworth
Maintainer:           Da.Waterworth@gmail.com
Category:             Database
Build-type:           Simple
Extra-source-files:   README.md
Cabal-version:        >= 1.8

Flag buildDistributed
  description:        Build the distributed backend 
  default:            False

Flag werror
  description:        Make warnings errors
  default:            False

Library
  hs-source-dirs:     app/src
  build-depends:      base         >= 4 && < 5
                    , bytestring   >= 0.9 && < 0.10
                    , unix         >= 2.5 && < 2.6
                    , directory    >= 1.1 && < 1.2
                    , binary       >= 0.5 && < 0.6
                    , mtl          >= 2.0 && < 2.1
                    , transformers >= 0.2 && < 0.3
                    , SHA          >= 1.5 && < 1.6
                    , enumerator   >= 0.4.14 && < 0.5
                    , hex          >= 0.1 && < 0.2
                    , containers   >= 0.4 && < 0.5
                    , network      >= 2.3 && < 2.4
                    , random       >= 1.0 && < 1.1

  exposed-modules:    Control.Monad.Hoist
                      Control.Monad.Trans.Store

                      Data.Enumerator.Hoist
                      Data.Nullable

                      Database.Siege.Commands
                      Database.Siege.Connection
                      Database.Siege.DBDequeue
                      -- Database.Siege.DBList
                      Database.Siege.DBMap
                      Database.Siege.DBNodeBinary
                      Database.Siege.DBNode
                      Database.Siege.DBOperation
                      Database.Siege.DBSequence
                      Database.Siege.DBSet
                      Database.Siege.DBTree
                      -- Database.Siege.DBVector
                      -- Database.Siege.DoStore
                      Database.Siege.Flushable
                      Database.Siege.Hash
                      Database.Siege.Memory
                      Database.Siege.NetworkHelper
                      Database.Siege.NetworkProtocol
                      -- Database.Siege.Query
                      Database.Siege.Recv
                      Database.Siege.SharedState
                      Database.Siege.ShowTree
                      Database.Siege.StringHelper

  GHC-Options:        -Wall
  if flag(werror)
    GHC-Options:      -Werror

  if flag(buildDistributed)
    include-dirs:     /usr/include/zookeeper, app/src/Database/Zookeeper
    extra-libraries:  zookeeper_mt
    build-tools:      hsc2hs
    build-depends:    base >= 4 && < 5
    exposed-modules:  Database.Zookeeper.Core
    C-Sources:        app/src/Database/Zookeeper/consts.c

--Test-Suite siege-test
--  build-depends:      base, bytestring, unix, directory, binary, mtl, 
--                      transformers, SHA, enumerator, hex, containers, network, 
--                      random, redis, siege, QuickCheck, stm
--  hs-source-dirs:     app/testsuite, app/src
--  type:               exitcode-stdio-1.0
--  main-is:            test.hs
--  GHC-Options:        -Wall
--  if flag(werror)
--    GHC-Options:      -Werror

Executable siege-disk
  hs-source-dirs:     app/src
  main-is:            siege-disk.hs
  build-depends:      base         >= 4 && < 5
                    , bytestring   >= 0.9 && < 0.10
                    , mtl          >= 2.0 && < 2.1
                    , transformers >= 0.2 && < 0.3
                    , containers   >= 0.4 && < 0.5
                    , directory    >= 1.1 && < 1.2
                    , network      >= 2.3 && < 2.4
                    , enumerator   >= 0.4.14 && < 0.5
                    , binary       >= 0.5 && < 0.6
                    , hex          >= 0.1 && < 0.2
                    , SHA          >= 1.5 && < 1.6
                    , siege
  GHC-Options:        -Wall
  if flag(werror)
    GHC-Options:      -Werror

--Executable siege-memory
--  hs-source-dirs:     app/src
--  build-depends:      base, bytestring, unix, directory, binary, mtl, 
--                      transformers, SHA, enumerator, hex, containers, network, 
--                      random
--  main-is:            siege-memory.hs
--  GHC-Options:        -Wall
--  if flag(werror)
--    GHC-Options:      -Werror

--Executable siege-distributed
--  if flag(buildDistributed)
--    build-depends:    base, bytestring, unix, directory, binary, mtl, 
--                      transformers, SHA, enumerator, hex, containers, network, 
--                      random, redis, siege
--    hs-source-dirs:   app/src
--  else
--    Buildable:        False
--  main-is:            siege-distributed.hs
--  GHC-Options:        -Wall
--  if flag(werror)
--    GHC-Options:      -Werror
